Transmute/Replicate check their costs from registry